--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -30,6 +30,24 @@ layout: default
           {% if page.read_time %}
             <p class="page__meta"><i class="fa fa-clock-o" aria-hidden="true"></i> {% include read-time.html %}</p>
           {% endif %}
+
+          {% if page.modified %}
+            {% assign date = page.modified %}
+          {% elsif page.date %}
+            {% assign date = page.date %}
+          {% endif %}
+
+          {% if date %}
+            <p class="page__meta">
+              <time datetime="{{ date | date_to_xmlschema }}">
+                {% if page.date_string %}
+                  {{ page.date_string }}
+                {% else %}
+                  {{ date | date: "%B %-d, %Y" }}
+                {% endif %}
+              </time>
+            </p>
+          {% endif %}
         </header>
       {% endunless %}
 
@@ -43,11 +61,6 @@ layout: default
           <h4 class="page__meta-title">{{ site.data.ui-text[site.locale].meta_label }}</h4>
         {% endif %}
         {% include page__taxonomy.html %}
-        {% if page.modified %}
-          <p class="page__date"><strong><i class="fa fa-fw fa-calendar" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label }}</strong> <time datetime="{{ page.modified | date: "%Y-%m-%d" }}">{{ page.modified | date: "%B %d, %Y" }}</time></p>
-        {% elsif page.date %}
-          <p class="page__date"><strong><i class="fa fa-fw fa-calendar" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label }}</strong> <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%B %d, %Y" }}</time></p>
-        {% endif %}
       </footer>
 
       {% if page.share %}{% include social-share.html %}{% endif %}
