Add hireme page and favicon

--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,5 +1,11 @@
 <!-- start custom head snippets -->
 
 <!-- insert favicons. use http://realfavicongenerator.net/ -->
-
+<link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/apple-touch-icon.png?v=69kG8kKXej">
+<link rel="icon" type="image/png" href="/assets/icons/favicon-32x32.png?v=69kG8kKXej" sizes="32x32">
+<link rel="icon" type="image/png" href="/assets/icons/favicon-16x16.png?v=69kG8kKXej" sizes="16x16">
+<link rel="manifest" href="/assets/icons/manifest.json?v=69kG8kKXej">
+<link rel="mask-icon" href="/assets/icons/safari-pinned-tab.svg?v=69kG8kKXej" color="#5bbad5">
+<link rel="shortcut icon" href="/favicon.ico?v=69kG8kKXej">
+<meta name="theme-color" content="#ffffff">
 <!-- end custom head snippets -->
